# ai-compilers-systems-prep

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: module-0-ci.yml
module-0-cpp-onramp/: .gitignore  CMakeLists.txt  README.md
module-0-cpp-onramp/colab/: QUICKSTART.md
module-0-cpp-onramp/include/: check.h
module-0-cpp-onramp/lessons/01-setup-and-compilation/: README.md  hello.cpp
module-0-cpp-onramp/lessons/02-variables-and-types/: README.md  example.cpp  exercise.cpp
module-0-cpp-onramp/lessons/03-pointers-and-references/: README.md  example.cpp  exercise.cpp
module-0-cpp-onramp/lessons/04-memory-and-bugs/: README.md  example.cpp  exercise.cpp
module-0-cpp-onramp/lessons/05-raii-and-smart-pointers/: README.md  example.cpp  exercise.cpp
module-0-cpp-onramp/lessons/06-functions-const-headers/: README.md  example.cpp  exercise.cpp  mathutils.cpp  mathutils.h
module-0-cpp-onramp/lessons/07-capstone-dynamic-array/: BUGHUNT.md  README.md  dyn_array.cpp  dyn_array.h  main.cpp
project-1-sentinel/: SPEC.md
project-2-lumen/: SPEC.md
